@@ -2,6 +2,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+    - RPC client to track message id for response before sending it.
 
 0.009     2021-07-14 18:39:34+08:00 Asia/Kuala_Lumpur
     [API Changes]
